fixed menu on small screens

--- a/src/components/UI/Navigation.module.css
+++ b/src/components/UI/Navigation.module.css
@@ -68,6 +68,7 @@
 
     .items.show {
         display: flex;
+        z-index: 100000;
     }
 
     .burgerMenu {
